--- a/index.html
+++ b/index.html
@@ -115,20 +115,33 @@
 	.image-container:hover .view-button {
 	  opacity: 1;
 	}
-	body {
-	  background-color: black !important;
-	  color: lightgray !important;
+/*	body {*/
+/*  color: gray !important;*/
+/*}*/
+	.blurred-bg {
+	  position: fixed;
+	  top: 0;
+	  left: 0;
+	  width: 100%;
+	  height: 100%;
+	  /*background-image: url('images/download.jpeg');*/
+		background-color: white;
+	  background-size: cover;
+	  background-position: center;
+	  background-repeat: no-repeat;
+	  filter: blur(5px); /* Adjust the blur value to your preference */
+	  z-index: -1;
 	}
-	a {
-  color: #00aaff !important;
-}
+/*	a {*/
+/*  color: #00aaff !important;*/
+/*}*/
 
-a:hover {
-  color: #0088cc !important;
-}
-h1, h2, h3, h4, h5, h6 {
-  color: white !important;
-}
+/*a:hover {*/
+/*  color: #0088cc !important;*/
+/*}*/
+/*h1, h2, h3, h4, h5, h6 {*/
+/*  color: black !important;*/
+/*}*/
 	</style>
 
 
@@ -163,7 +176,7 @@ h1, h2, h3, h4, h5, h6 {
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-
+		<div class="blurred-bg"></div>
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
