Fix final report

--- a/index.html
+++ b/index.html
@@ -557,8 +557,8 @@
 								  <br>
 								<div class="download-container">
 								  <figure class="download-figure">
-									<a href="labs/rss_lab6.pdf" download>
-									  <img src="labs/lab6_preview.png" alt="Download Report" class="download-image">
+									<a href="labs/rss_final_v2.pdf" download>
+									  <img src="labs/final_preview.png" alt="Download Report" class="download-image">
 										<figcaption>Download Lab Report</figcaption>
 									</a>
 								  </figure>
