added michael and ragulan profile pics

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 						<div class="row">
 							<div class="column">
 							  <a class="image avatar">
-								<div class="circle-avatar" data-src="images/fulls/05.jpg"></div>
+								<div class="circle-avatar" data-src="images/michael.JPG"></div>
 							  </a>
 							  <h3>Michael Wong</h3>
 							  <p>mwong21@mit.edu</p>
@@ -339,7 +339,7 @@
 						<div class="column">
 						  <a class="image avatar">
 							<div class="circle-avatar-container">
-							  <img class="circle-avatar" src="images/thumbs/01.jpg" alt="" />
+							  <img class="circle-avatar" src="images/ragulan.jpg" alt="" />
 							</div>
 						  </a>
 						  <h3>Ragulan Sivakumar</h3>
