Put michael on the website (and Ragulan)

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 	}
 	.small-video {
 	  max-height: 200px; /* Adjust the height as desired */
-		max-width:100px
+		max-width:100px;
 	  width: auto;
 	  height: auto;
 	}
@@ -299,9 +299,11 @@
 						</header>
 						<div class="row">
 							<div class="column">
-							  <a class="image avatar">
-								<div class="circle-avatar" data-src="images/michael.JPG"></div>
-							  </a>
+								<a class="image avatar">
+									<div class="circle-avatar-container">
+									  <img class="circle-avatar" src="images/michael.JPG" alt="" />
+									</div>
+								  </a>
 							  <h3>Michael Wong</h3>
 							  <p>mwong21@mit.edu</p>
 							</div>
